# painting_recognition_workaround

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml
notebooks/: qdrant_semantic_search.ipynb
painting_recognition/: __init__.py
painting_recognition/core/: __init__.py
painting_recognition/core/DTO/: image_dto.py
painting_recognition/core/client/: __init__.py  qdrant.py
painting_recognition/core/clients/: __init__.py  qdrant.py
painting_recognition/core/config/: __init__.py  huggingface.py  log.py  qdrant.py
painting_recognition/core/utils/: __init__.py  base64_utils.py
painting_recognition/core/utils/transformers_utils/: __init__.py
painting_recognition/routes/transformer/: images.py
painting_recognition/routes/versioning/: __init__.py  v1.py
