[tool.poetry]
name = "painting-recognition"
version = "0.1.0"
description = ""
authors = ["Lorenzo D'Agostino <lorenzo.dagostino.ref@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.2"
qdrant-client = "^1.7.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
transformers = "^4.37.2"
torch = {version = "^2.2.1+cpu", source = "pytorch"}
torchvision = {version = "^0.17.1+cpu", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
